--- a/index-en.html
+++ b/index-en.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="description" content="Port Folio, CV, Resume, Profiles, Portfolio" />
-    <meta name="author" content="Mr.Pattana Boonthung">
+    <meta name="author" content="Mss.Manatsanun Charoenphon">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!--====== Title ======-->
@@ -89,10 +89,10 @@
                                 <div class="col-lg-5">
                                     <div class="about-content pt-100 rpt-0 animate-element delay5 fadeInUp">
                                         <span class="sub-title mb-15 animate-element delay3 fadeInUp">About Me</span>
-                                        <h2 class="slide-title animate-element delay5 fadeInUp">Hi,<br> I’m <span class="text-typed a-typed a-typed-about" data-text="Pattana Boonthung"></span></h2>
+                                        <h2 class="slide-title animate-element delay5 fadeInUp">Hi,<br> I’m <span class="text-typed a-typed a-typed-about" data-text="Manatsanun Charoenphon"></span></h2>
                                         <h3 class="animate-element delay7 fadeInUp">Darasamutr School</h3>
-                                        <p class="animate-element delay8 fadeInUp">Birthday<b>:</b>  10 August 1992.</p>
-                                        <p class="animate-element delay8 fadeInUp">Nickname<b>:</b>  Ma-Toy.</p>
+                                        <p class="animate-element delay8 fadeInUp">Birthday<b>:</b>  13 August 2007.</p>
+                                        <p class="animate-element delay8 fadeInUp">Nickname<b>:</b>  Poy.</p>
                                         <p class="animate-element delay8 fadeInUp">Epigram<b>:</b>  The future depends on what we do in the present.</p>
                                         <div class="social-style-one mt-55 rmt-35 animate-element delay10 fadeInUp">
                                             <a href="https://www.facebook.com/sirachadevelop"><i class="fab fa-facebook-f"></i></a>
@@ -122,7 +122,7 @@
                                     <div class="service-image animate-element delay4 fadeInUp">
                                         <span class="sub-title mb-75">Lifestyle</span>
                                         <div class="service-inner-images">
-                                            <img src="assets/images/lifestyle/lifestyle.png" alt="Service">
+                                            <img src="assets/images/lifestyle/lifestyles.png" alt="Service">
                                             <img class="shape-one animate-element delay6 bounceIn" src="assets/images/lifestyle/shape-one-dark.png" alt="shape">
                                             <img class="shape-two animate-element delay8 bounceIn" src="assets/images/lifestyle/shape-two-dark.png" alt="shape">
                                         </div>
@@ -309,28 +309,28 @@
                               </div>
                             <div class="portfolio-wrap">
                                 <div class="portfolio-item animate-element delay11 fadeInUp">
-                                    <img src="assets/images/portfolio/portfolio_1.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port01.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item animate-element delay13 fadeInUp">
-                                    <img src="assets/images/portfolio/portfolio_2.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port02.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_3.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port03.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_4.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port04.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_5.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port05.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_6.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port06.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_7.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port7.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio_8.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/port8.png" alt="Portfolio">
                                 </div>
                             </div>
                         </div>
